# Subscription-Platform-DApp

./: README.md  package-lock.json  tailwind.config.js
lease-contract/src/: lib.rs
project/: contract-service.js  package.json
project/lease-contract/: Cargo.toml  README.md
project/src/: contract-service.d.ts
project/src/types/: contract-service.d.ts
src/: App.tsx
src/components/: Navbar.tsx
src/context/: AssetContext.tsx  ContractContext.tsx  WalletContext.tsx
src/pages/: Home.tsx  ListAsset.tsx  MyLeases.tsx
